--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,9 +2,8 @@
 main:
 
   - title: "About"
-    url: /about/
+    url: /about.html
 
   - title: "Projects"
-    url: /projects/
+    url: /projects.html
 
-  
