--- a/_config.yml
+++ b/_config.yml
@@ -97,11 +97,9 @@ author:
   avatar           : "/assets/images/profile_pic.jpg"
   bio              : "I'm currently a computer science graduate student studying in Northeastern Univeristy @ Seattle."
   location         : "Seattle"
-  email            : 
+  #email            : ##
   links:
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
-      url:  "chiehlinleee@gmail.com"
+
     - label: "CV"
       icon: "fas fa-fw fa-id-card"
       url:  "https://justin19960919.github.io/Chieh-Lin_Lee_CV.pdf"
@@ -117,6 +115,9 @@ author:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       url: "https://www.instagram.com/justin85919/"
+    - label: "Email"
+      icon: "fas fa-fw fa-envelope-square"
+      url:  mailto:chiehlinleee@gmail.com
 
 # Site Footer
 footer:
