--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,13 @@
 # main links
 main:
-
+  #- title: "Quick-Start Guide"
+  #  url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   - title: "About"
     url: /about/
   - title: "Projects"
     url: /projects/
-  - title: "PPP"
-    url: /ppp/
-
+  - title: "xx"
+    url: /xx/
 
 # main links
 #main:
