--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ analytics:
 header:
   image: /assets/images/ocean.jpg
   image_description: "Beach in eastern Taiwan"
-  caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
+  caption: "Photo credit:"
 
 
 
