--- a/_config.yml
+++ b/_config.yml
@@ -91,15 +91,6 @@ analytics:
     anonymize_ip         : # true, false (default)
 
 
-## internet image
-header:
-  image: "https://get.wallhere.com/photo/1600x1280-px-1muo-action-fantasy-fighting-medieval-mmo-mu-online-perfect-poster-RPG-samurai-warrior-1569603.jpg"
-  image_description: "random image from internet"
-
-
-
-
-
 ## image
 
 # header:
@@ -116,7 +107,9 @@ header:
 #   overlay_filter: 0.5 
 #   caption: "Beach in eastern Taiwan"
 
-
+excerpt: "This post should display a **header with a solid background color**, if the theme supports it."
+header:
+  overlay_color: "#333"
 
 # Site Author
 author:
